REGRESSION(r156846): Crashes with guard malloc https://bugs.webkit.org/show_bug.cgi?id=156984

Reviewed by Andreas Kling.

RenderElement::cachedFirstLineStyle() returns pointer to local std::unique_ptr.

* rendering/RenderElement.cpp:
(WebCore::RenderElement::uncachedFirstLineStyle):
(WebCore::RenderElement::cachedFirstLineStyle):
(WebCore::RenderElement::firstLineStyle):
(WebCore::firstLineStyleForCachedUncachedType): Deleted.

    Don't try to use a single function for the cached and uncached cases. Separate the cases into the calling functions.



Canonical link: https://commits.webkit.org/175087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200031 268f45cc-cd09-0410-ab3c-d52691b4dbfc